--- a/README
+++ b/README
@@ -1,3 +1,5 @@
+UPDATE: This is a lua port for Neovim of https://github.com/vim-scripts/ReplaceWithRegister
+
 This is a mirror of http://www.vim.org/scripts/script.php?script_id=2703
 
 DESCRIPTION
